# sql-connector

./: .gitignore  Cargo.toml  Makefile  mqtt-duck.yaml  mqtt-sql.yaml  mqtt-table.sql
crates/duckdb-sink/: Cargo.toml  Connector.toml
crates/duckdb-sink/src/: config.rs  db.rs  duckdb.rs  main.rs  model.rs  sink.rs
crates/fluvio-model-sql/: Cargo.toml
crates/fluvio-model-sql/src/: lib.rs
crates/sql-sink/: Cargo.toml
crates/sql-sink/src/: db.rs  duckdb.rs  main.rs
